additional margin fix on mobile

--- a/src/view/frontend/web/css/clean-checkout-l.css
+++ b/src/view/frontend/web/css/clean-checkout-l.css
@@ -86,7 +86,6 @@
     padding-top: 0px;
     padding-right: 0px;
     background-color: transparent;
-    margin-bottom: 0px;
     padding-bottom: 0px;
 }
 
