--- a/src/view/frontend/web/css/clean-checkout-m.css
+++ b/src/view/frontend/web/css/clean-checkout-m.css
@@ -61,6 +61,10 @@
     border-bottom: none;
 }
 
+.opc-block-summary {
+    margin-bottom: 0px;
+}
+
 .opc-block-summary .items-in-cart {
     margin-bottom: 20px;
 }
